--- a/tile.css
+++ b/tile.css
@@ -335,29 +335,50 @@ section {
 div.tile {
   padding: 1em 2em;
 }
-div.tile header h1 {
-  display: inline-block;
-  margin-top: 0;
+div.tile .logo {
+  width: 98px;
 }
-div.tile header .logo {
-  width: 45px;
+div.tile .masthead {
+  display: inline-block;
+  margin-top: -14px;
+  vertical-align: top;
+}
+div.tile .masthead h1 {
+  display: inline-block;
+  margin: 0;
+}
+div.tile .masthead .social {
+  display: block;
+  text-align: left;
 }
 
-ul.posts {
+ul.list {
   clear: both;
   margin: 0;
   padding: 0;
   margin-top: 1em;
   list-style: none;
 }
-ul.posts li {
-  background-color: #f2f2f2;
-  outline: 1px solid #b2b2b2;
-  padding: 3px;
+ul.list li {
+  border-left: 1em solid #B2F33C;
+  background-color: #CEF586;
   margin-bottom: 5px;
+  height: 1.8em;
 }
-ul.posts li a {
+ul.list li:hover {
+  border-left: 1em solid #55731D;
+}
+ul.list li a {
   text-decoration: none;
+  display: inline-block;
+  padding: 3px;
+  float: left;
+}
+ul.list li span {
+  float: right;
+  color: white;
+  background-color: rgba(76, 76, 76, 0.2);
+  padding: 3px 1em;
 }
 
 .block img {
@@ -368,9 +389,32 @@ ul.posts li a {
 .block div {
   background-color: #B2F33C;
   padding: .5em;
+  border-left: 1px solid #666;
 }
 .block h4 {
   font-weight: bold;
+  position: relative;
+  padding-left: 5px;
+}
+.block h4:before {
+  position: absolute;
+  bottom: 3px;
+  left: -10px;
+  content: '';
+  width: 0;
+  height: 0;
+  border: 10px solid transparent;
+  border-left-color: #666;
+}
+.block h4:after {
+  position: absolute;
+  bottom: 3px;
+  left: -30px;
+  content: '';
+  width: 0;
+  height: 0;
+  border: 10px solid transparent;
+  border-right-color: #666;
 }
 
 .meta {
@@ -414,7 +458,25 @@ input[type="button"] {
   padding: 0;
 }
 .right h1 {
-  -webkit-margin-before: 0;
+  background: #B2F33C;
+  border-bottom: 30px solid rgba(242, 58, 58, 0.61);
+  border-bottom: 20px solid rgba(255, 255, 255, 0.6);
+  position: relative;
+}
+.right h1:after {
+  position: absolute;
+  bottom: -40px;
+  left: 0;
+  content: '';
+  width: 100%;
+  height: 20px;
+  background: rgba(0, 0, 0, 0.1);
+}
+.right h3, .right h4 {
+  margin: 1em auto .25em;
+  color: #B2F33C;
+  border-left: 1rem solid rgba(0, 0, 0, 0.1);
+  padding: .25em;
 }
 
 .clear {
@@ -424,13 +486,24 @@ input[type="button"] {
 .bar {
   font-size: 2em;
 }
+.bar img {
+  border: 3px solid rgba(0, 0, 0, 0.1);
+}
+
+.link a, p a {
+  color: #C93CF3;
+  text-decoration: underline;
+}
+.link a:hover, p a:hover {
+  color: #8208A6;
+}
 
 @media screen and (min-width: 50em) {
   .left, .right {
     width: 49%;
   }
 
-  .posts {
+  .list {
     width: 49%;
     float: left;
   }
