--- a/tile.scss
+++ b/tile.scss
@@ -75,30 +75,55 @@ section{
 
 div.tile{
 	padding: 1em 2em;
-	header{
+	.logo{
+		width: 98px;
+	}			
+	.masthead{
+		display: inline-block;
+		margin-top: -14px;
+			vertical-align: top;
+
 		h1{
 			display: inline-block;
-			margin-top: 0;
+			margin: 0;
 		}
-		.logo{
-			width: 45px;
+
+		.social{
+			display: block;
+			text-align: left;
+			i{
+
+			}
 		}
-	}
+	}	
 }
 
-ul.posts{
+ul.list{
 	clear: both;
 	margin: 0;
 	padding: 0;
 	margin-top: 1em;
 	list-style: none;
 	li{
-		background-color: $white-alt;
-		outline: 1px solid $gray-light;
-		padding: 3px;
+		border-left: 1em solid $green;
+		background-color: $green-light;
 		margin-bottom: 5px;
+		height: 1.8em;
+		&:hover{
+			border-left: 1em solid $green-dark;
+		}
 		a{
 			text-decoration: none;
+			display: inline-block;
+			padding: 3px;
+			float: left;
+		}
+		span{
+			float: right;
+			color: white;
+			background-color: transparentize($gray-dark, .8);
+			padding: 3px 1em;
+			
 		}
 	}
 }
@@ -112,9 +137,32 @@ ul.posts{
 	div{
 		background-color: $green;
 		padding: .5em;
+		border-left: 1px solid $gray;
 	}
 	h4{
 		font-weight: bold;
+		position: relative;
+		padding-left: 5px;
+		&:before{
+			position: absolute;
+			bottom: 3px;
+			left: -10px;
+			content: '';
+			width: 0;
+			height: 0;
+			border: 10px solid transparent;
+			border-left-color: $gray;
+		}
+		&:after{
+			position: absolute;
+			bottom: 3px;
+			left: -30px;
+			content: '';
+			width: 0;
+			height: 0;
+			border: 10px solid transparent;
+			border-right-color: $gray;
+		}		
 	}
 }
 
@@ -156,7 +204,26 @@ ul.posts{
 	width: 100%;
 	padding: 0;
 	h1{
-		-webkit-margin-before: 0;
+		background: $green;
+		border-bottom: 30px solid hsla(0, 88%, 59%, 0.61);
+		border-bottom: 20px solid hsla(0, 0%, 100%, 0.6);
+		position: relative;
+		&:after{
+			position: absolute;
+			bottom: -40px;
+			left: 0;
+			content: '';
+			width: 100%;
+			height: 20px;
+			background: hsla(0, 80, 0, 0.10);
+		}
+	}
+
+	h3,h4{
+		margin: 1em auto .25em;
+		color: $green;
+		border-left: 1rem solid hsla(0, 80, 0, 0.10);
+		padding: .25em;
 	}
 }
 .clear{
@@ -164,14 +231,27 @@ ul.posts{
 }
 
 .bar{
+	img{
+		border: 3px solid hsla(0, 80, 0, 0.10);
+	}
 	font-size: 2em;
+	h1{
+	}
+}
+
+.link a, p a{
+	color: $purple;
+	text-decoration: underline;
+	&:hover{
+		color: $purple-dark;
+	}
 }
 
 @media screen and (min-width: 50em){
 	.left, .right{
 		width: 49%;
 	}
-	.posts{
+	.list{
 		width: 49%;
 		float: left;
 	}
