--- a/tile.css
+++ b/tile.css
@@ -108,6 +108,7 @@ body {
   font: 18px/150% "PT Sans Narrow", Arial, Tahoma, sans-serif;
   -webkit-text-size-adjust: 100%;
   color: #4c4c4c;
+  margin: 0 .5em;
 }
 @media all and (min-width: 45em) {
   body {
@@ -305,9 +306,37 @@ td {
 /**************
 STYLE TILE BASE 
 **************/
-body {
+html, body {
   margin: 0em auto;
   width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+aside {
+  height: 100%;
+  min-height: 100%;
+  border-right: 1px solid grey;
+}
+aside p {
+  padding: 10px;
+}
+aside figure {
+  width: 45%;
+  margin: 0 auto;
+  display: inline-block;
+  border: 1px solid grey;
+  padding: 0;
+}
+aside figure figcaption {
+  background: grey;
+  color: white;
+  font-size: .8em;
+  text-align: left;
+  padding-left: 5px;
+}
+aside figure img {
+  margin-bottom: 0;
 }
 
 .colors ul {
@@ -333,23 +362,13 @@ section {
 }
 
 div.tile {
-  padding: 1em 2em;
+  height: 100%;
 }
-div.tile .logo {
-  width: 98px;
-}
-div.tile .masthead {
-  display: inline-block;
-  margin-top: -14px;
-  vertical-align: top;
-}
-div.tile .masthead h1 {
-  display: inline-block;
-  margin: 0;
-}
-div.tile .masthead .social {
-  display: block;
-  text-align: left;
+div.tile h1 {
+  text-align: center;
+  font: bold 48px 'PT Sans Narrow',sans-serif;
+  text-shadow: 1px 1px 0 #fff, 2px 2px 0 #999;
+  color: black;
 }
 
 ul.list {
@@ -381,40 +400,9 @@ ul.list li span {
   padding: 3px 1em;
 }
 
-.block img {
+.center {
   margin: 0 auto;
-  display: block;
-}
-
-.block div {
-  background-color: #B2F33C;
-  padding: .5em;
-  border-left: 1px solid #666;
-}
-.block h4 {
-  font-weight: bold;
-  position: relative;
-  padding-left: 5px;
-}
-.block h4:before {
-  position: absolute;
-  bottom: 3px;
-  left: -10px;
-  content: '';
-  width: 0;
-  height: 0;
-  border: 10px solid transparent;
-  border-left-color: #666;
-}
-.block h4:after {
-  position: absolute;
-  bottom: 3px;
-  left: -30px;
-  content: '';
-  width: 0;
-  height: 0;
-  border: 10px solid transparent;
-  border-right-color: #666;
+  text-align: center;
 }
 
 .meta {
@@ -422,55 +410,44 @@ ul.list li span {
   margin: 0 .5em 0 .5em;
 }
 
-.left {
-  width: 100%;
-  clear: left;
-  float: left;
-  padding: 0;
-}
-.left .colors ul li {
-  height: 60px;
-  width: 60px;
+.colors ul li {
+  height: 90px;
+  width: 90px;
+  margin: .5em auto;
   line-height: 40px;
 }
 
-.textures ul {
+.left {
+  width: 30%;
+  float: left;
+  padding: 0;
+}
+.left .textures ul {
   width: 100%;
 }
-.textures ul li {
+.left .textures ul li {
   width: 31%;
   height: 100px;
   -webkit-box-shadow: 0px 2px 3px rgba(50, 50, 50, 0.55);
   -moz-box-shadow: 0px 2px 3px rgba(50, 50, 50, 0.55);
   box-shadow: 0px 2px 3px rgba(50, 50, 50, 0.55);
 }
-
-input[type="button"] {
+.left input[type="button"] {
   width: 48%;
 }
-
-.auth {
+.left .auth {
   margin-top: 3.5em;
 }
 
 .right {
-  width: 100%;
-  padding: 0;
+  width: 600px;
+  float: left;
+  padding-left: 3em;
 }
 .right h1 {
-  background: #B2F33C;
-  border-bottom: 30px solid rgba(242, 58, 58, 0.61);
-  border-bottom: 20px solid rgba(255, 255, 255, 0.6);
+  color: #B2F33C;
+  border: 1px solid grey;
   position: relative;
-}
-.right h1:after {
-  position: absolute;
-  bottom: -40px;
-  left: 0;
-  content: '';
-  width: 100%;
-  height: 20px;
-  background: rgba(0, 0, 0, 0.1);
 }
 .right h3, .right h4 {
   margin: 1em auto .25em;
@@ -483,11 +460,18 @@ input[type="button"] {
   clear: both;
 }
 
-.bar {
-  font-size: 2em;
+#owl {
+  position: fixed;
+  bottom: 0;
+  right: 0;
 }
-.bar img {
-  border: 3px solid rgba(0, 0, 0, 0.1);
+
+.corner {
+  position: absolute;
+  top: 0;
+  right: 0;
+  text-align: right;
+  width: 300px;
 }
 
 .link a, p a {
@@ -498,17 +482,73 @@ input[type="button"] {
   color: #8208A6;
 }
 
-@media screen and (min-width: 50em) {
-  .left, .right {
-    width: 49%;
-  }
+.buttons {
+  width: 100%;
+  height: 2em;
+  line-height: 2em;
+  margin-top: .5em;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-content: flex-start;
+  align-items: flex-start;
+}
+.buttons a {
+  flex: 0 1 33%;
+  align-self: auto;
+  text-align: center;
+  font-size: 1em;
+  color: #fefefe;
+  text-shadow: none;
+  font-weight: normal;
+  text-decoration: none;
+  background: rgba(0, 0, 0, 0.6);
+}
+.buttons a:hover {
+  background: rgba(0, 0, 0, 0.8);
+}
+.buttons div {
+  flex: 0 1 25%;
+  align-self: auto;
+  text-align: center;
+  font-size: .75em;
+  color: #fefefe;
+  text-shadow: none;
+  font-weight: normal;
+  text-decoration: none;
+  background: rgba(0, 0, 0, 0.6);
+  margin: .15em;
+  height: 4em;
+  line-height: 4em;
+}
 
-  .list {
-    width: 49%;
-    float: left;
-  }
+.dotted {
+  background-image: -webkit-repeating-radial-gradient(center center, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) 1px, transparent 1px, transparent 100%);
+  background-image: -moz-repeating-radial-gradient(center center, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) 1px, transparent 1px, transparent 100%);
+  background-image: -ms-repeating-radial-gradient(center center, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) 1px, transparent 1px, transparent 100%);
+  background-image: repeating-radial-gradient(center center, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2) 1px, transparent 1px, transparent 100%);
+  -webkit-background-size: 3px 3px;
+  -moz-background-size: 3px 3px;
+  background-size: 3px 3px;
+}
 
-  .right {
-    margin-top: -170px;
-  }
+.striped {
+  background-image: -webkit-repeating-linear-gradient(135deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) 1px, transparent 2px, transparent 2px, rgba(0, 0, 0, 0.3) 3px);
+  background-image: -moz-repeating-linear-gradient(135deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) 1px, transparent 2px, transparent 2px, rgba(0, 0, 0, 0.3) 3px);
+  background-image: -o-repeating-linear-gradient(135deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) 1px, transparent 2px, transparent 2px, rgba(0, 0, 0, 0.3) 3px);
+  background-image: repeating-linear-gradient(135deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) 1px, transparent 2px, transparent 2px, rgba(0, 0, 0, 0.3) 3px);
+  -webkit-background-size: 4px 4px;
+  -moz-background-size: 4px 4px;
+  background-size: 4px 4px;
+}
+
+.grid {
+  background-image: -webkit-repeating-linear-gradient(135deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) 1px, transparent 2px, transparent 2px, rgba(0, 0, 0, 0.3) 3px);
+  background-image: -moz-repeating-linear-gradient(135deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) 1px, transparent 2px, transparent 2px, rgba(0, 0, 0, 0.3) 3px);
+  background-image: -o-repeating-linear-gradient(135deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) 1px, transparent 2px, transparent 2px, rgba(0, 0, 0, 0.3) 3px);
+  background-image: repeating-linear-gradient(135deg, rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) 1px, transparent 2px, transparent 2px, rgba(0, 0, 0, 0.3) 3px);
+  -webkit-background-size: 2px 2px;
+  -moz-background-size: 2px 2px;
+  background-size: 2px 2px;
 }
