--- a/tile.scss
+++ b/tile.scss
@@ -47,9 +47,38 @@ STYLE TILE BASE
 	box-shadow:         0px $one $two rgba(50, 50, 50, 0.55);
 }
 
-body{
+
+html, body{
 	margin: 0em auto;
 	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
+
+aside{
+	height: 100%;
+	min-height: 100%;
+	border-right: 1px solid grey; 
+	p{
+		padding: 10px;
+	}
+	figure{
+		width: 45%;
+		margin: 0 auto;
+		display: inline-block;
+		border: 1px solid grey;
+		padding: 0;
+		figcaption{
+			background: grey;
+			color: white;
+			font-size: .8em;
+			text-align: left;
+			padding-left: 5px;
+		}
+		img{
+			margin-bottom: 0;
+		}
+	}
 }
 
 .colors ul{
@@ -74,29 +103,14 @@ section{
 }
 
 div.tile{
-	padding: 1em 2em;
-	.logo{
-		width: 98px;
-	}			
-	.masthead{
-		display: inline-block;
-		margin-top: -14px;
-			vertical-align: top;
-
-		h1{
-			display: inline-block;
-			margin: 0;
-		}
-
-		.social{
-			display: block;
-			text-align: left;
-			i{
-
-			}
-		}
-	}	
-}
+	height: 100%;
+	h1{
+		text-align: center;
+	  font: bold 48px 'PT Sans Narrow',sans-serif;
+	  text-shadow: 1px 1px 0 #fff, 2px 2px 0 #999;
+	  color: black;
+	}
+}	
 
 ul.list{
 	clear: both;
@@ -128,42 +142,10 @@ ul.list{
 	}
 }
 
-.block img{
+.center{
 	margin: 0 auto;
-	display: block;
-}
+	text-align: center;
 
-.block{
-	div{
-		background-color: $green;
-		padding: .5em;
-		border-left: 1px solid $gray;
-	}
-	h4{
-		font-weight: bold;
-		position: relative;
-		padding-left: 5px;
-		&:before{
-			position: absolute;
-			bottom: 3px;
-			left: -10px;
-			content: '';
-			width: 0;
-			height: 0;
-			border: 10px solid transparent;
-			border-left-color: $gray;
-		}
-		&:after{
-			position: absolute;
-			bottom: 3px;
-			left: -30px;
-			content: '';
-			width: 0;
-			height: 0;
-			border: 10px solid transparent;
-			border-right-color: $gray;
-		}		
-	}
 }
 
 .meta{
@@ -171,19 +153,19 @@ ul.list{
 	margin: 0 .5em 0 .5em;
 }
 
-.left{
-	width: 100%;
-	clear: left;
-	float: left;
-	padding: 0;
-	.colors{
-		ul li{
-				height: 60px;
-				width: 60px;
-				line-height: 40px;
-			}
+.colors{
+	ul li{
+			height: 90px;
+			width: 90px;
+			margin: .5em auto;
+			line-height: 40px;
 		}
 	}
+
+.left{
+	width: 30%;
+	float: left;
+	padding: 0;
 	.textures{
 		ul {
 			width: 100%;
@@ -200,23 +182,16 @@ ul.list{
 	.auth{
 		margin-top: 3.5em;
 	}
+}
+
 .right{
-	width: 100%;
-	padding: 0;
+	width: 600px;
+	float: left;
+	padding-left: 3em;
 	h1{
-		background: $green;
-		border-bottom: 30px solid hsla(0, 88%, 59%, 0.61);
-		border-bottom: 20px solid hsla(0, 0%, 100%, 0.6);
+		color: $green;
+		border: 1px solid grey; 
 		position: relative;
-		&:after{
-			position: absolute;
-			bottom: -40px;
-			left: 0;
-			content: '';
-			width: 100%;
-			height: 20px;
-			background: hsla(0, 80, 0, 0.10);
-		}
 	}
 
 	h3,h4{
@@ -230,13 +205,18 @@ ul.list{
 	clear: both;
 }
 
-.bar{
-	img{
-		border: 3px solid hsla(0, 80, 0, 0.10);
-	}
-	font-size: 2em;
-	h1{
-	}
+#owl{
+	position: fixed;
+	bottom: 0;
+	right: 0;
+}
+
+.corner{
+	position: absolute;
+	top: 0;
+	right: 0;
+	text-align: right;
+	width: 300px;
 }
 
 .link a, p a{
@@ -247,15 +227,74 @@ ul.list{
 	}
 }
 
-@media screen and (min-width: 50em){
-	.left, .right{
-		width: 49%;
-	}
-	.list{
-		width: 49%;
-		float: left;
-	}
-	.right{
-		margin-top: -170px;
-	}
+.buttons{
+  width: 100%;
+  height: 2em;
+  line-height: 2em;
+  margin-top: .5em;
+  
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-content: flex-start;
+    align-items: flex-start;
+  a{
+      flex: 0 1 33%;
+      align-self: auto;
+      text-align: center;
+      font-size: 1em;
+      color: #fefefe;
+      text-shadow: none;
+      font-weight: normal;
+      text-decoration: none;
+      background: rgba(0,0,0,.6);
+      &:hover{
+        background: rgba(0,0,0,.8);
+      }
+    }
+  div{
+          flex: 0 1 25%;
+      align-self: auto;
+      text-align: center;
+      font-size: .75em;
+      color: #fefefe;
+      text-shadow: none;
+      font-weight: normal;
+      text-decoration: none;
+      background: rgba(0,0,0,.6);
+      margin: .15em;
+      height: 4em;
+      line-height: 4em;
+  }
+ }
+
+.dotted{
+	background-image: -webkit-repeating-radial-gradient(center center, rgba(0,0,0,.2), rgba(0,0,0,.2) 1px, transparent 1px, transparent 100%);
+	background-image: -moz-repeating-radial-gradient(center center, rgba(0,0,0,.2), rgba(0,0,0,.2) 1px, transparent 1px, transparent 100%);
+	background-image: -ms-repeating-radial-gradient(center center, rgba(0,0,0,.2), rgba(0,0,0,.2) 1px, transparent 1px, transparent 100%);
+	background-image: repeating-radial-gradient(center center, rgba(0,0,0,.2), rgba(0,0,0,.2) 1px, transparent 1px, transparent 100%);
+	-webkit-background-size: 3px 3px;
+	-moz-background-size: 3px 3px;
+	background-size: 3px 3px;
+}
+
+.striped {
+  background-image: -webkit-repeating-linear-gradient(135deg, rgba(0,0,0,.3), rgba(0,0,0,.3) 1px, transparent 2px, transparent 2px, rgba(0,0,0,.3) 3px);
+  background-image: -moz-repeating-linear-gradient(135deg, rgba(0,0,0,.3), rgba(0,0,0,.3) 1px, transparent 2px, transparent 2px, rgba(0,0,0,.3) 3px);
+  background-image: -o-repeating-linear-gradient(135deg, rgba(0,0,0,.3), rgba(0,0,0,.3) 1px, transparent 2px, transparent 2px, rgba(0,0,0,.3) 3px);
+  background-image: repeating-linear-gradient(135deg, rgba(0,0,0,.3), rgba(0,0,0,.3) 1px, transparent 2px, transparent 2px, rgba(0,0,0,.3) 3px);
+  -webkit-background-size: 4px 4px;
+  -moz-background-size: 4px 4px;
+  background-size: 4px 4px;
+  }
+
+  .grid{
+  background-image: -webkit-repeating-linear-gradient(135deg, rgba(0,0,0,.3), rgba(0,0,0,.3) 1px, transparent 2px, transparent 2px, rgba(0,0,0,.3) 3px);
+  background-image: -moz-repeating-linear-gradient(135deg, rgba(0,0,0,.3), rgba(0,0,0,.3) 1px, transparent 2px, transparent 2px, rgba(0,0,0,.3) 3px);
+  background-image: -o-repeating-linear-gradient(135deg, rgba(0,0,0,.3), rgba(0,0,0,.3) 1px, transparent 2px, transparent 2px, rgba(0,0,0,.3) 3px);
+  background-image: repeating-linear-gradient(135deg, rgba(0,0,0,.3), rgba(0,0,0,.3) 1px, transparent 2px, transparent 2px, rgba(0,0,0,.3) 3px);
+  -webkit-background-size: 2px 2px;
+  -moz-background-size: 2px 2px;
+  background-size: 2px 2px;
 }
